Fix layout shift of toolbar on page load, other small improvements for the navigation module support

--- a/styles/components/responsive_preview.scss
+++ b/styles/components/responsive_preview.scss
@@ -3,6 +3,7 @@
 
   &-item-list {
     top: 36px !important;
+    transform: none !important;
   }
 }
 
